--- a/index.html
+++ b/index.html
@@ -4,34 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My POrtfolio</title>
+    <title>KNI Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
-.open-sans-<uniquifier> {
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-}
 
 
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 
-<body>
+<body class=".open-sans-normal">
     <header class="head">
-        <h3>Ga<span style="color: orangered;">r</span>y</h3>
+        
         <nav>
-            <ul>
-                <li>Portfolio</li>
-                <li>Blog</li>
-                <li><Button>Hire Me</Button></li>
+            <h3 class="head-title">Ka<span style="color: orangered;">z</span>i</h3>
+            <ul class="nav-bar">
+              <li><a href="">Portfolio</a></li>
+              <li><a href="">Blog</a></li>
+              <li><a href=""><button class="buttons">Hire Me</button></a></li>
             </ul>
         </nav>
+        <section class="intro">
+            <h4 class="sec-greeting">Hi,I am</h4>
+            <h1>Kazi Nazrul</h1>
+            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <button class="buttons">Download CV
+            </button>
+            <button class="buttons">Contact</button>
+        </section>
     </header>
 
 </body>
