--- a/index.html
+++ b/index.html
@@ -25,15 +25,48 @@
               <li><a href=""><button class="buttons">Hire Me</button></a></li>
             </ul>
         </nav>
-        <section class="intro">
+        <div class="intro">
+           <div>
             <h4 class="sec-greeting">Hi,I am</h4>
-            <h1>Kazi Nazrul</h1>
-            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <h1 style="font-size: 3em;">Kazi Nazrul</h1>
+            <p style="font-size: 1.25em;">Shot what able cold new see hold.Friendly as an betrayed formerly he. <br> Morning because as to society behaved moments.</p>
             <button class="buttons">Download CV
             </button>
             <button class="buttons">Contact</button>
-        </section>
+           </div> 
+           <div>
+             <img class="intro-pic" src="images/hardy.png" alt="" width="400px" height="500px">
+           </div>
+        </div>
     </header>
+
+    <main>
+        <div class="about">
+            <div class="about-content">
+                <h3 class="about-title">About me</h3>
+                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            
+            </div>
+        </div>
+        <div class="info-container">
+            <div class="info">
+            <p class="info-title">Name:</p>
+            <p class="info-detail">Kazi Nazrul</p>
+        </div>
+        <div class="info">
+            <p class="info-title">Email:</p>
+            <p class="info-detail">kni@gmail.com</p>
+        </div>
+        <div class="info">
+            <p class="info-title">Date of Birth:</p>
+            <p class="info-detail">11 November,1945</p>
+        </div>
+        <div class="info">
+            <p class="info-title">From:</p>
+            <p class="info-detail">West Bengal,BD</p>
+        </div>
+        </div>
+    </main>
 
 </body>
 
