--- a/index.html
+++ b/index.html
@@ -152,6 +152,28 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
     
     </main>
 
+    <footer class="res-foot">
+        <div class="foot-col">
+            <h3 class="foot-col-title">Let's Connect</h3>
+            <p class="foot-descript">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <a href=""><img src="icons/facebook.png" alt=""></a>
+            <a href=""><img src="icons/insta.png" alt=""></a>
+            <a href=""><img src="icons/twitter.png" alt=""></a>
+        </div>
+        <div class="foot-col">
+            <h3 class="mssg">Inbox Me</h3>
+            <form>
+                <input type="text" name="" id="" placeholder="Your Name"> <br>
+                <input type="email" name="" id="" placeholder="Your Name"> <br>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Write Your Message"></textarea><br>
+                <input class="buttons" type="submit" value="Submit">
+
+            </form>
+
+        </div>
+    </footer>
+
 </body>
 
 </html>
