--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/6a7c5fbee2.js" crossorigin="anonymous"></script>
 
 
 
@@ -30,9 +31,9 @@
             <h4 class="sec-greeting">Hi,I am</h4>
             <h1 style="font-size: 3em;">Kazi Nazrul</h1>
             <p style="font-size: 1.25em;">Shot what able cold new see hold.Friendly as an betrayed formerly he. <br> Morning because as to society behaved moments.</p>
-            <button class="buttons">Download CV
+            <button class="buttons"><i class="fa-solid fa-cloud-arrow-down"></i> Download CV
             </button>
-            <button class="buttons">Contact</button>
+            <button class="buttons"><i class="fa-solid fa-phone"></i> Contact</button>
            </div> 
            <div>
              <img class="intro-pic" src="images/hardy.png" alt="" width="400px" height="500px">
@@ -172,7 +173,11 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
             </form>
 
         </div>
+      
     </footer>
+      <div class="down-res">
+            <button class="buttons"><i class="fa-solid fa-download"></i> Download Resume</button>
+        </div>
 
 </body>
 
